@@ -2,7 +2,8 @@ use ExtUtils::MakeMaker;
 
 WriteMakefile( 
                'NAME'           => 'Astro::Catalog',
-	       'VERSION'        => '2.1.1',
+	       'VERSION'        => '2.1.3',
+               'EXE_FILES'      => [ 'catalogs', 'supercosmos', 'finder' ],
                'PREREQ_PM'      => { LWP         => 5.53,
                                      Net::Domain => 2.13,
                                      Pod::Usage  => 1.14 },
